re PR middle-end/57026 (ice: SSA corruption)

2013-04-23  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/57026
	* tree-vrp.c (simplify_conversion_using_ranges): Do not propagate
	from SSA names occuring in abnormal PHI nodes.

	* gcc.dg/torture/pr57026.c: New testcase.

From-SVN: r198175